syntax = "proto3";

package milvus.proto.log;

option go_package = "github.com/milvus-io/milvus/internal/proto/logpb";

import "common.proto";
import "milvus.proto";
import "msg.proto";

service LogNode {
    rpc GetComponentStates(milvus.GetComponentStatesRequest) returns (milvus.ComponentStates) {}
    rpc WatchChannel(WatchChannelRequest)returns (common.Status){};
    rpc UnwatchChannel(UnwatchChannelRequest)returns (common.Status){};
    rpc Insert(InsertRequest)returns (common.Status){};
}

enum PChannelState {
    Unused = 0;
    Waitting = 1;
    Watching = 2;    
}

message PChannelInfo {
    string name = 1;
    PChannelState state=2;
    int64 nodeID = 3;
}

message LogNodeInfo{
    int64 nodeID = 1;
    string address = 2;
}

message WatchChannelRequest{
    common.MsgBase base = 1;
    string pChannel = 2;
}

message UnwatchChannelRequest{
    common.MsgBase base = 1;
    string pChannel = 2;
}

message InsertRequest{
    common.MsgBase base = 1;
    repeated msg.InsertRequest msgs = 2;
    repeated string pChannels = 3;
}